# ckb-bitcoin-spv-contracts

./: .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  checksums.txt
.github/workflows/: checksum.yaml  ci.yaml
contracts/can-update-without-ownership-lock/: Cargo.toml  README.md
contracts/can-update-without-ownership-lock/src/: entry.rs  error.rs  main.rs
contracts/ckb-bitcoin-spv-type-lock/: Cargo.toml  Makefile  README.md
contracts/ckb-bitcoin-spv-type-lock/src/: entry.rs  error.rs  main.rs
contracts/ckb-bitcoin-spv-type-lock/src/operations/: create.rs  destroy.rs  mod.rs  reorg.rs  reset.rs  update.rs
contracts/ckb-bitcoin-spv-type-lock/src/utilities/: mod.rs  type_id.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/src/contracts/: can_update_without_ownership_lock.rs  mod.rs
tests/src/contracts/ckb_bitcoin_spv_type_lock/: create.rs  destroy.rs  mod.rs  reorg.rs  update.rs
tests/src/utilities/: data_helper.rs  mod.rs  type_id.rs
