[package]
name = "can-update-without-ownership-lock"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2021"
license = "MIT"
description = "This contract is used for testing only."
homepage = "https://github.com/ckb-cell/ckb-bitcoin-spv-contracts"
repository = "https://github.com/ckb-cell/ckb-bitcoin-spv-contracts"

[dependencies]
ckb-std = "0.15.1"
