[package]
name = "ckb-bitcoin-spv-type-lock"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2021"
license = "MIT"
description = "A type script for Bitcoin SPV clients."
homepage = "https://github.com/ckb-cell/ckb-bitcoin-spv-contracts"
repository = "https://github.com/ckb-cell/ckb-bitcoin-spv-contracts"

[dependencies]
ckb-std = "0.15.1"
ckb-hash = { version = "0.112.1", default-features = false, features = ["ckb-contract"] }

[dependencies.ckb-bitcoin-spv-verifier]
version = "0.1.0"
git = "https://github.com/ckb-cell/ckb-bitcoin-spv"
rev = "bfc71d7"
default-features = false
features = ["no-std"]
